--- a/src/style.css
+++ b/src/style.css
@@ -326,4 +326,43 @@ form{
     margin-top:10px;
    
     
-    }
+ }
+
+ .MenuModal{
+    width:70%;
+    min-height: 70vh;
+    margin:15%;
+    background-color: rgb(239, 239, 239,0.6);
+    border-radius: 8px;
+    font-family: serif;  
+    position: static;
+ }
+
+ .solidbackground{
+    padding:10px;
+ }
+
+ .pending{
+    padding:8px;
+    color: #666;
+    border-radius: 8px;
+ }
+
+ .closebtn{
+    width: 50px;
+    height: 50px;
+    position:absolute;
+    margin:5px;
+    padding-top:8px;
+    background-color: #fff;
+    border-radius: 50%;
+
+ }
+
+ .closebtn:hover{
+
+    background-color: #AAA;
+    
+    font-family: serif;
+
+ }
