--- a/src/style.css
+++ b/src/style.css
@@ -280,14 +280,25 @@ font-family: serif;
 min-height: 50vh;
 
 }
+.overflow{
+    overflow: scroll;
+    background-color: #ddd;
+    min-height: 70%;
+    max-height: 70%;
+    padding: 5px;
+
+}
+.meal{
+
+padding:5px;
+margin-bottom: 5px;
+border-radius: 3px;
+}
 
 .discustomer{
-    position: fixed;
-    left:80%;
-    top:13%;
+
     background-color: #efefef;
     color: #fff;
-    width:15%;
     font-family: serif;
     height:35vh;
     border-radius: 8px;
@@ -329,13 +340,22 @@ form{
  }
 
  .MenuModal{
-    width:70%;
-    min-height: 70vh;
-    margin:15%;
-    background-color: rgb(239, 239, 239,0.6);
+    width:100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.0.3);
     border-radius: 8px;
     font-family: serif;  
-    position: static;
+    position:fixed;
+    top:0%;
+    left:0%;
+    z-index: 100;
+ }
+
+ .MenuModalData{
+    background-color: #efefef;
+    margin:10%;
+    border-radius: 8px;;
+
  }
 
  .solidbackground{
