--- a/src/style.css
+++ b/src/style.css
@@ -155,43 +155,34 @@ margin-top:10%;
 
 
 .Service{
-    position: relative;
+
     width:100%;
     height:50vh;
-    background-image: url("IMG/service.jpg");
+    background-image: url("IMG/food.jpg");
     background-size: cover;
     position: relative;
     z-index: 0;
 }
 
-
-.sshadow{
-    position: absolute;
-    top:0;
-    left:0;  
-    width:100%;
-    height: 50vh;
-    background-color:rgba(0, 25, 112, 0.6);
-    z-index: 1;
-    color:#fff;
-    
-}
-
-.Sdesc{
-
-    position: absolute;
-    left:0;
-    top:0;  
-    width:100%;
-   max-height: 50vh;
-    z-index: 2;
-    color:#fff;
+.ser{
     font-family: serif;
-    
 }
 
-.Sdesc h2{
-    color:#fff;
+.ser i{
+ 
+    margin-top:10%;
+    color:#888;
+    font-size: 500%;
+}
+
+
+.ser h2{
+    margin:5px;
+    color:#666;
+}
+
+.ser h4{
+    color: #666;
 }
 
 
@@ -220,7 +211,8 @@ color:#666;
 .cat{
     margin-top: 3%;
     position: relative;
-    opacity: 0.6;
+    min-height: 40vh;
+    
 }
 
 
@@ -260,13 +252,13 @@ font-family: serif;
     margin-top: 15px;
 }
 
-.cartIcon{
-    padding:5px;
-}
+
 .cartIcon :hover{
-    transform: scale(1.1)
+   transform: scale(1.1);
+   color:#303f9f;
 
 }
+
 
 .cartIcon :active{
     transform: scale(1.2)
@@ -276,12 +268,15 @@ font-family: serif;
 .cartArea{
 
     width:100%;
-    min-height: 50vh;
-    margin:10px;
+    height: 50vh;
+    max-width: 50vh;
+    margin:3px;
     padding:10px;
-    border: 2px solid #ddd;
+    
     border-radius: 8px;
-    background-color: #fffffd;
+   
+    overflow: auto;
+    max-height: 60vh;
 
 
 
@@ -461,6 +456,7 @@ form{
     background-size: cover;
     z-index: 100;
     opacity: 0.8;
+   
  }
  .Navi{
      height: 6vh;
@@ -479,3 +475,31 @@ form{
     background-color: #303f9f;
     height: 5vh;
 }
+
+@media screen and (max-width:798px){
+
+.catagory{
+    display:none;
+}
+.Service{
+display: none;
+}
+
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+    
+}
+
+
+  ::-webkit-scrollbar-thumb {
+    background: #dddddd;
+    
+  }
+
+  .quantitiy input{
+    width:100%;
+  }
+  
+
