--- a/src/style.css
+++ b/src/style.css
@@ -33,9 +33,9 @@ background-color: #001970;
 }
 
 .Footer{
- background-color: #001970;
+background-color: #001970;
  
-height: 50vh;
+min-height: 50vh;
 padding:10%;
 
 }
@@ -119,7 +119,7 @@ padding:10%;
 }
 
 .ratedResuturant{
-    min-height: 80vh;
+    min-height: 70vh;
 }
 
 .card-image{
@@ -282,10 +282,11 @@ font-family: serif;
 
 }
 
-.setMargin form{
-
-min-height: 50vh;
-
+.addKit{
+font-family: serif;
+}
+.addKit h2{
+    color:#333
 }
 .overflow{
     overflow: scroll;
@@ -484,6 +485,10 @@ form{
 .Service{
 display: none;
 }
+.dashboard_menu{
+    position:relative;
+    
+}
 
 }
 
@@ -501,5 +506,20 @@ display: none;
   .quantitiy input{
     width:100%;
   }
-  
 
+  .dashboardshow{
+    height: 60vh;
+  }
+
+  .dashboard {
+        }
+  
+  .dashicon{
+      display: flex;
+      align-content: center;
+      align-items: center;
+        justify-content: center;
+        color:#fff;
+
+  }
+  
