--- a/src/style.css
+++ b/src/style.css
@@ -328,27 +328,27 @@ font-family: serif;
     color:#333
 }
 .overflow{
-    overflow: scroll;
-    background-color: #eee;
-    min-height: 70%;
-    max-height: 70%;
+    overflow: auto;
+    max-height: 200px;
+    min-height: 200px;
     padding: 5px;
+    margin-bottom: 20px;
 
 }
 .meal{
-
 padding:5px;
+padding-left:20px;
 margin-bottom: 5px;
 border-radius: 3px;
+border-left: 6px outset #ddd;
 }
 
 .discustomer{
-
-  /*background-color: #efefef;*/
     color: #fff;
     font-family: serif;
     height:35vh;
     border-radius: 8px;
+    width:90%;
 
 }
     
@@ -388,8 +388,8 @@ form{
 
  .MenuModal{
     width:100%;
-    min-height: 100%;
-    background-color: rgba(0, 0, 0, 0.0.3);
+    height: 100%;
+   background-color: rgba(0, 0, 0,0.6);
     border-radius: 8px;
     font-family: serif;  
     position:fixed;
@@ -399,39 +399,23 @@ form{
  }
 
  .MenuModalData{
-    background-color: #efefef;
-    margin:10%;
-    border-radius: 8px;;
+    
+    margin-top:10%;
+    border-radius: 8px;
+    min-height: 30vh;
+    max-height: 30vh;
 
  }
 
  .solidbackground{
     padding:10px;
+
  }
 
  .pending{
     padding:8px;
     color: #666;
     border-radius: 8px;
- }
-
- .closebtn{
-    width: 50px;
-    height: 50px;
-    position:absolute;
-    margin:5px;
-    padding-top:8px;
-    background-color: #fff;
-    border-radius: 50%;
-
- }
-
- .closebtn:hover{
-
-    background-color: #AAA;
-    
-    font-family: serif;
-
  }
 
  .login{
@@ -632,7 +616,7 @@ display: none;
       margin-top: 10px;
   }
   .profile{
-      height: 90vh;
+      margin-bottom: 20px;
   }
   .rated{
     color: goldenrod;
